로그아웃 기능

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -65,6 +65,12 @@
             android:layout_height="wrap_content"
             android:text="My 스터디"
             android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/bt_logout"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="로그아웃"/>
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
