--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -9,6 +9,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
         tools:ignore="MissingConstraints">
 
         <TextView
@@ -28,7 +30,7 @@
             android:hint="이름을 입력하세요." />
 
         <EditText
-            android:id="@+id/et_pid"
+            android:id="@+id/et_pnick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="사용할 닉네임을 입력해주세요." />
@@ -41,19 +43,21 @@
 
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/tv_pname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="이름: -" />
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/tv_pnick"
-            android:text="닉네임: -" />
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="닉네임: -" />
+
+        <TextView
             android:id="@+id/tv_plevel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="레벨: 0" />
 
 
