--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,6 +14,14 @@
         android:layout_height="wrap_content"
         android:background="#FFC107">
 
+        <TextView
+            android:id="@+id/toolbar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="#FFFFFF"
+            android:text="꿀터디"
+            android:textSize="30sp" />
 
     </androidx.appcompat.widget.Toolbar>
 
