--- a/app/src/main/res/layout/activity_mystudyweekly.xml
+++ b/app/src/main/res/layout/activity_mystudyweekly.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fragmentB"
-        class="com.example.studyproject.FragmentWeekly"
+        class="com.example.studyproject.WeeklyFragment"
         android:layout_weight="1"
         tools:layout="@layout/activity_weeklyplan" />
 </LinearLayout>
