--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -9,9 +9,11 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:gravity="center"
-        tools:ignore="MissingConstraints">
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="88dp"
+        tools:layout_editor_absoluteY="126dp">
 
         <TextView
             android:id="@+id/textView6"
@@ -22,12 +24,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/et_pname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="이름을 입력하세요." />
 
         <EditText
             android:id="@+id/et_pnick"
