--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -27,10 +27,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="454dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="25dp"
-        android:layout_marginBottom="75dp"
+        android:layout_marginBottom="0dp"
         android:background="#ECEBEB"
         android:orientation="vertical">
 
@@ -38,8 +38,8 @@
             android:id="@+id/editSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/edittext_rounded_corner_rectangle"
             android:hint="검색어를 입력하세요."
             android:padding="15dp" />
@@ -47,19 +47,24 @@
         <FrameLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="435dp"
+            android:layout_height="362dp"
             android:layout_marginHorizontal="15dp">
 
         </FrameLayout>
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Button" />
-
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="개설하기"
+        android:textColor="#ffffff"
+        android:background="@drawable/btn_red_round"
+        android:minHeight="0dp"
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="14dp"/>
 
 
 </LinearLayout>
