스터디룸 db 쓰기 성공

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -50,6 +50,11 @@
             android:layout_height="362dp"
             android:layout_marginHorizontal="15dp">
 
+            <ListView
+                android:id="@+id/room_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
         </FrameLayout>
 
     </LinearLayout>
