--- a/app/src/main/res/layout/activity_makeroom.xml
+++ b/app/src/main/res/layout/activity_makeroom.xml
@@ -3,32 +3,195 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal|center_vertical">
 
-    <EditText
-        android:id="@+id/et_roomname"
-        android:layout_width="378dp"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal|center_vertical">
+        <EditText
+            android:id="@+id/et_roomname"
+            android:layout_width="378dp"
+            android:layout_height="wrap_content"
+            android:hint="스터디룸 이름을 적어주세요"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        <EditText
+            android:id="@+id/et_roomcategory"
+            android:layout_width="360dp"
+            android:layout_height="wrap_content"
+            android:inputType="numberSigned"
+            android:hint="한 주의 인증 횟수"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="회"/>
+        </LinearLayout>
 
-    <EditText
-        android:id="@+id/et_roomcategory"
-        android:layout_width="378dp"
-        android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/et_roominfo"
+            android:layout_width="378dp"
+            android:layout_height="wrap_content"
+            android:hint="스터디룸의 카테고리를 설정해 주세요"/>
 
-    <EditText
-        android:id="@+id/et_roominfo"
-        android:layout_width="378dp"
-        android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/et_roomauth"
+            android:layout_width="378dp"
+            android:layout_height="wrap_content"
+            android:hint="스터디룸에 대한 소개글을 작성해 주세요"/>
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/et_roomauth"
-        android:layout_width="378dp"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal|center_vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center">
+            <Switch
+                android:id="@+id/switch1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="인증 요일 설정" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:gravity="center">
+
+                <CheckBox
+                    android:id="@+id/bt_mon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="월요일" />
+
+                <CheckBox
+                    android:id="@+id/bt_tus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="화요일" />
+
+                <CheckBox
+                    android:id="@+id/bt_wed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="수요일" />
+
+                <CheckBox
+                    android:id="@+id/bt_thu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="목요일" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:gravity="center">
+
+                <CheckBox
+                    android:id="@+id/bt_fri"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="금요일" />
+
+                <CheckBox
+                    android:id="@+id/bt_sat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="토요일" />
+
+                <CheckBox
+                    android:id="@+id/bt_sun"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="일요일" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:gravity="center_horizontal|center_vertical">
+            <Switch
+                android:id="@+id/switch2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="인증 시간 설정" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="시작 시각"/>
+                <Button
+                    android:id="@+id/bt_stTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="오후 8:00"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="종료 시각"/>
+                <Button
+                    android:id="@+id/bt_edTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="오후 11:00"/>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="인증 방식 선택"/>
+            <RadioGroup
+                android:id="@+id/rb_group1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <RadioButton
+                    android:id="@+id/rb_cnt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="횟수"/>
+                <RadioButton
+                    android:id="@+id/rb_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="시간"/>
+            </RadioGroup>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/bt_makeroom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="개설" />
 
     <ScrollView
