--- a/app/src/main/res/layout/fragment_search_all.xml
+++ b/app/src/main/res/layout/fragment_search_all.xml
@@ -5,7 +5,6 @@
     android:orientation="vertical"
     android:background="#ECEBEB">
 
-
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
@@ -24,4 +23,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="전체" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
+
 </LinearLayout>
