--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFCF0"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -11,85 +12,88 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
         android:layout_gravity="center"
-        android:text="로그인" />
+        android:gravity="center"
+        android:text="꿀터디"
+        android:textColor="#F3C94E"
+        android:textSize="60dp"
+        android:layout_marginVertical="70dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textViewId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="아이디" />
+        android:orientation="vertical"
+        android:layout_margin="30dp">
 
         <EditText
             android:id="@+id/editTextId"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:background="@drawable/edittext_gray"
             android:ems="10"
-            android:hint="~~@gmail.com"
-            android:inputType="textPersonName" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textViewPw"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="비밀번호" />
+            android:hint="이메일"
+            android:inputType="textPersonName"
+            android:padding="15dp"
+            android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
+            android:drawablePadding="10dp"
+            />
 
         <EditText
             android:id="@+id/editTextPw"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:background="@drawable/edittext_gray"
             android:ems="10"
-            android:inputType="textPassword" />
+            android:hint="비밀번호"
+            android:inputType="textPassword"
+            android:layout_marginVertical="20dp"
+            android:padding="15dp"
+            android:drawableLeft="@drawable/ic_outline_lock_24"
+            android:drawablePadding="10dp"
+            />
 
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:text="로그인" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        <Button
+            android:id="@+id/buttonLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_yellow_round"
+            android:text="로그인"
+            android:textStyle="bold"
+            android:textColor="#ffffff"/>
 
         <Button
             android:id="@+id/buttonFind"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="아이디/비밀번호 찾기" />
+            android:background="#00ff0000"
+            android:text="비밀번호를 잊었나요?"
+            android:textColor="#9F9F9F"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginTop="70dp">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="회원이 아닌가요?"
+            android:textColor="#9F9F9F" />
 
         <Button
             android:id="@+id/buttonJoin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="회원가입하기" />
+            android:background="#00ff0000"
+            android:text="회원가입"
+            android:textColor="#E14545"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
