스터디룸 db 리사이클러뷰 카테고리별 (완료)

--- a/app/src/main/res/layout/fragment_search_hobby.xml
+++ b/app/src/main/res/layout/fragment_search_hobby.xml
@@ -24,4 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="취미" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recview_4"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
