--- a/app/src/main/res/layout/fragment_search_exercise.xml
+++ b/app/src/main/res/layout/fragment_search_exercise.xml
@@ -24,4 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="운동" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recview_2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
