--- a/app/src/main/res/layout/singlerowdesign.xml
+++ b/app/src/main/res/layout/singlerowdesign.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#E0E0E0">
+
+        <TextView
+            android:id="@+id/text_index"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:text="1" />
 
         <TextView
             android:id="@+id/text_1"
@@ -14,6 +26,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
+            android:layout_toRightOf="@+id/text_index"
             android:text="Your room name" />
 
         <TextView
@@ -26,6 +39,24 @@
             android:layout_marginBottom="5dp"
             android:layout_toRightOf="@+id/text_1"
             android:text="room info" />
+
+        <TextView
+            android:id="@+id/text_3"
+            android:layout_width="82dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="61dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_toRightOf="@+id/text_2"
+            android:text="room person" />
+
+        <ImageView
+            android:layout_width="27dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="69dp"
+            android:layout_toRightOf="@+id/text_3" />
 
     </RelativeLayout>
 
