--- a/app/src/main/res/layout/activity_makeroom.xml
+++ b/app/src/main/res/layout/activity_makeroom.xml
@@ -166,7 +166,8 @@
                     android:id="@+id/bt_stTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="오후 8:00"/>
+                    android:text="오전 8:00"/>
+
             </LinearLayout>
 
             <LinearLayout
