--- a/app/src/main/res/layout/fragment_weekly.xml
+++ b/app/src/main/res/layout/fragment_weekly.xml
@@ -47,4 +47,11 @@
             tools:srcCompat="@tools:sample/avatars" />
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/imageViewTempGallery"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        tools:srcCompat="@tools:sample/avatars" />
+
 </LinearLayout>
