--- a/app/src/main/res/layout/todolist_item.xml
+++ b/app/src/main/res/layout/todolist_item.xml
@@ -20,7 +20,7 @@
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="match_parent"
+            android:layout_width="388dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView" />
