방 개설 (DB 연결X)

--- a/app/src/main/res/layout/activity_makeroom.xml
+++ b/app/src/main/res/layout/activity_makeroom.xml
@@ -55,7 +55,8 @@
         <RadioGroup
             android:id="@+id/rb_group2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
             <RadioButton
                 android:id="@+id/rb_1"
                 android:layout_width="wrap_content"
