--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,44 +13,42 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginVertical="70dp"
         android:gravity="center"
         android:text="꿀터디"
         android:textColor="#F3C94E"
-        android:textSize="60dp"
-        android:layout_marginVertical="70dp"/>
+        android:textSize="60dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="30dp">
+        android:layout_margin="30dp"
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/editTextId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/edittext_gray"
+            android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
+            android:drawablePadding="10dp"
             android:ems="10"
             android:hint="이메일"
             android:inputType="textPersonName"
-            android:padding="15dp"
-            android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
-            android:drawablePadding="10dp"
-            />
+            android:padding="15dp" />
 
         <EditText
             android:id="@+id/editTextPw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
             android:background="@drawable/edittext_gray"
+            android:drawableLeft="@drawable/ic_outline_lock_24"
+            android:drawablePadding="10dp"
             android:ems="10"
             android:hint="비밀번호"
             android:inputType="textPassword"
-            android:layout_marginVertical="20dp"
-            android:padding="15dp"
-            android:drawableLeft="@drawable/ic_outline_lock_24"
-            android:drawablePadding="10dp"
-            />
+            android:padding="15dp" />
 
         <Button
             android:id="@+id/buttonLogin"
@@ -58,26 +56,26 @@
             android:layout_height="wrap_content"
             android:background="@drawable/btn_yellow_round"
             android:text="로그인"
-            android:textStyle="bold"
-            android:textColor="#ffffff"/>
+            android:textColor="#ffffff"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/buttonFind"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="#00ff0000"
             android:text="비밀번호를 잊었나요?"
-            android:textColor="#9F9F9F"
-            android:layout_gravity="center"/>
+            android:textColor="#9F9F9F" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_marginTop="70dp"
         android:gravity="center"
-        android:layout_marginTop="70dp">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView7"
