--- a/app/src/main/res/layout/activity_makeroom.xml
+++ b/app/src/main/res/layout/activity_makeroom.xml
@@ -7,6 +7,21 @@
     android:layout_gravity="center_horizontal|center_vertical">
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="570dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="0dp"
+        android:background="@drawable/background_gray"
+        android:orientation="vertical">
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="스터디 개설"
+    android:textSize="25dp"/>
+
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -246,7 +261,7 @@
 
 
     </LinearLayout>
-
+    </LinearLayout>
     <Button
         android:id="@+id/bt_makeroom"
         android:layout_width="wrap_content"
