--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,9 @@
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
+
+    <style name="makeFontStyle">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">12dp</item>
+    </style>
 </resources>
