--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:gravity="center"
         android:text="꿀터디"
         android:textColor="#ffffff"
+        android:fontFamily="@font/maplestorybold"
         android:textSize="70dp"/>
 
 </LinearLayout>
