--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -4,17 +4,33 @@
 
     <item
         android:id="@+id/tab1"
-        app:showAsAction="ifRoom"
         android:enabled="true"
-        android:title="홈" />
+        android:title="홈 화면"
+        android:icon="@drawable/ic_baseline_home_24"
+        app:cnb_textColor="#ffffff"
+        app:cnb_iconColor="#ffffff"
+        app:cnb_backgroundColor="@color/mainColor"
+        />
+
     <item
         android:id="@+id/tab2"
-        app:showAsAction="ifRoom"
-        android:title="스터디" />
+        android:title="스터디 탐색"
+        android:icon="@drawable/ic_baseline_menu_book_24"
+        app:cnb_textColor="#ffffff"
+        app:cnb_iconColor="#ffffff"
+        app:cnb_backgroundColor="@color/mainColor"
+        />
+
     <item
         android:id="@+id/tab3"
-        app:showAsAction="ifRoom"
         android:enabled="true"
-        android:title="개인" />
+        android:title="개인 페이지"
+        android:icon="@drawable/ic_baseline_person_24"
+        app:cnb_textColor="#ffffff"
+        app:cnb_iconColor="#ffffff"
+        app:cnb_backgroundColor="@color/mainColor"
+        />
 
 </menu>
+
+<!--app:showAsAction="ifRoom"-->
